--- a/src/app/features/user-mgmt/users/users.component.scss
+++ b/src/app/features/user-mgmt/users/users.component.scss
@@ -17,12 +17,30 @@ form {
   }
 }
 
-mat-form-field {
+form mat-form-field {
   min-width: 30rem;
 }
 
-table {
+.filter-field {
+  width: 100%;
+}
+
+.table-wrapper {
+  overflow-x: auto;
   margin-bottom: 1rem;
+}
+
+td.mat-column-actions,
+th.mat-column-actions {
+  background: var(--mat-sys-surface-container);
+}
+
+.mat-column-username,
+.mat-column-groups {
+  max-width: 22ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 mat-divider {
